# fastapi-auth-study

./: README.md  pyproject.toml
fastapi_auth/: config.py  db.py  exceptions.py  main.py  models.py
fastapi_auth/api/: router.py
fastapi_auth/api/routes/: users.py
fastapi_auth/guards/: guards.py
fastapi_auth/services/: AuthService.py  __init__.py
